tests are added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+spring.artemis.enabled=true # to disable in tests
 spring.artemis.mode=native
 spring.artemis.broker-url=tcp://localhost:61616
 spring.artemis.user=admin
