docker is added, but artemis cannot run in it

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/library-spring-rest-artemis
+#spring.datasource.url=jdbc:postgresql://localhost:5432/library-spring-rest-artemis
+spring.datasource.url=jdbc:postgresql://postgres-db:5432/library-spring-rest-artemis
 spring.datasource.username=postgres
 spring.datasource.password=root
 
@@ -8,6 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.artemis.enabled=true # to disable in tests
 spring.artemis.mode=native
-spring.artemis.broker-url=tcp://localhost:61616
+#spring.artemis.broker-url=tcp://localhost:61616
+spring.artemis.broker-url=tcp://artemis:61616
 spring.artemis.user=admin
 spring.artemis.password=admin
